force-app/main/default/objects/KimbleOne__SalesOpportunityStage__c/KimbleOne__SalesOpportunityStage__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Sales Opportunity Stage</label>
    <nameField>
        <label>Sales Opportunity Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Opportunity Stages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>