force-app/main/default/objects/KimbleOne__SalesOpportunityStage__c/fields/KimbleOne__ApprovalSubmissionComments__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ApprovalSubmissionComments__c</fullName>
    <label>Approval Submission Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>