force-app/main/default/objects/KimbleOne__SalesOpportunityStage__c/fields/KimbleOne__OpportunityStage__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__OpportunityStage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Stage</label>
    <referenceTo>KimbleOne__OpportunityStage__c</referenceTo>
    <relationshipLabel>Sales Opportunity Stages</relationshipLabel>
    <relationshipName>SalesOpportunityStages</relationshipName>
    <type>Lookup</type>
</CustomField>