force-app/main/default/objects/KimbleOne__SalesOpportunityStage__c/fields/KimbleOne__SalesOpportunity__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SalesOpportunity__c</fullName>
    <label>Sales Opportunity</label>
    <referenceTo>KimbleOne__SalesOpportunity__c</referenceTo>
    <relationshipLabel>Sales Opportunity Stages</relationshipLabel>
    <relationshipName>SalesOpportunityStages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>