force-app/main/default/objects/KimbleOne__SalesOpportunityStage__c/fields/KimbleOne__WeightedContractRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__WeightedContractRevenue__c</fullName>
    <label>Weighted Contract Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>